cmake_minimum_required(VERSION 3.1.0)

project(sensor_driver)

aux_source_directory(. DIR_SRCS)

include_directories(${PROJECT_SOURCE_DIR}/../../recipe-sysroot/usr/include/vvcam/common)
link_directories(
    ${PROJECT_SOURCE_DIR}/../../recipe-sysroot/usr/lib/
)

if (NOT LIB_ROOT)
    get_filename_component(LIB_ROOT ${PROJECT_BINARY_DIR} ABSOLUTE)
endif (NOT LIB_ROOT)
message ("LIB_ROOT is at: ${LIB_ROOT}")

if(USE_3AV2)
add_definitions(-DUSE_3AV2)
endif()

if (SUBDEV_CHAR)
add_definitions(-DSUBDEV_CHAR)
endif()

add_definitions(-DHAL_ALTERA)
add_definitions(-DAPPMODE_NATIVE)
add_definitions(-DCAM_ENGINE_DRAW_DOM_ONLY)
add_definitions(-DISP8000L_BASE)
add_definitions(-DISP8000L_V2008)
add_definitions(-DISPVI_EXPAND_CHAN)
add_definitions(-DISP_2DNR)
add_definitions(-DISP_2DNR_V2)
add_definitions(-DISP_2DNR_V4)
add_definitions(-DISP_2DNR_V5)
add_definitions(-DISP_3DNR_V3)
add_definitions(-DISP_AEV2)
add_definitions(-DISP_AEV2_V2)
add_definitions(-DISP_AE_SHADOW)
add_definitions(-DISP_BLS)
add_definitions(-DISP_CA)
add_definitions(-DISP_COMPAND)
add_definitions(-DISP_CPROC_10BIT)
add_definitions(-DISP_CPROC_SHD)
add_definitions(-DISP_DEMOSAIC2)
add_definitions(-DISP_EE)
add_definitions(-DISP_FILTER)
add_definitions(-DISP_GREENEQUILIBRATE)
add_definitions(-DISP_HDR_STITCH)
add_definitions(-DISP_HIST256)
add_definitions(-DISP_HIST64)
add_definitions(-DISP_LSC_V2)
add_definitions(-DISP_MIV2)
add_definitions(-DISP_MI_BUF_DUMP)
add_definitions(-DISP_MI_HDR)
add_definitions(-DISP_MI_MCM_WR)
add_definitions(-DISP_MI_PP_WRITE)
add_definitions(-DISP_RGBGC)
add_definitions(-DISP_RGBIR)
add_definitions(-DISP_SP2)
add_definitions(-DISP_TPG)
add_definitions(-DISP_USE_AEV2)
add_definitions(-DISP_USE_AWBV2)
add_definitions(-DISP_VERSION=\"ISP8000L_V2008\")
add_definitions(-DISP_VSM)
add_definitions(-DISP_WDR_V4)
add_definitions(-DISP_WDR_V4_20BIT)
add_definitions(-DLINUX)
add_definitions(-DMARVIN_HW_ALTERA -DMIPI_USE_CAMERIC)
add_definitions(-DMRV_STITCHING_EXP_VERSION)
add_definitions(-DMRV_STITCHING_HIST_VERSION)
add_definitions(-DMRV_STITCHING_VERSION=2)

add_compile_options(-Werror=implicit-function-declaration)

set(DEPEND_LIBS
    isi
    hal
)

add_subdirectory(IMX219)
add_subdirectory(SC2310)
add_subdirectory(SC132GS)
add_subdirectory(GC5035)
add_subdirectory(GC02M1B)
add_subdirectory(IMX334)
